# bespoke

./: .gitignore  README.md  create.py  learn.py  pyproject.toml
.github/workflows/: ruff.yml  test.yml  uv-dependabot-sync.yml
bespoke/: __init__.py  builder.py  card.py  deck.py  languages.py  llm.py  urgency.py
data/: japanese_A1.txt  japanese_grammar.txt  trad_chinese_C2.txt  trad_chinese_grammar.txt
data/japanese/: vocabulary_A2.txt  vocabulary_B2.txt
data/simp_chinese/: grammar_A1.txt  vocabulary_B1.txt
data/trad_chinese/: grammar_A1.txt  grammar_B1.txt  grammar_B2.txt  vocabulary_A2.txt  vocabulary_B1.txt  vocabulary_B2.txt
languages/: english.json  french.json  german.json  italian.json  japanese.json  polish.json  russian.json  simp_chinese.json  spanish.json  trad_chinese.json
languages/german/: grammar_A1.txt  grammar_A2.txt  grammar_B1.txt  vocabulary_A1.txt  vocabulary_A2.txt  vocabulary_B1.txt
languages/japanese/: grammar_A1.txt  grammar_A2.txt  grammar_B1.txt  grammar_B2.txt  grammar_C1.txt  vocabulary_B1.txt  vocabulary_C1.txt  vocabulary_C2.txt
languages/simp_chinese/: grammar_A1.txt  grammar_A2.txt  grammar_B1.txt  grammar_B2.txt  grammar_C1.txt  vocabulary_A2.txt  vocabulary_C1.txt  vocabulary_C2.txt
languages/trad_chinese/: grammar_A2.txt  grammar_C1.txt  vocabulary_A1.txt  vocabulary_C1.txt
tests/: test_builder.py  test_card.py  test_languages.py
